# AkiraOS

./: .gitignore  .gitmodules  AGENTS.md  AGENTS.md.save  AkiraOS.code-workspace  CHANGELOG.md  CMakeLists.txt  COMMERCIAL.md  CONTRIBUTING.md  Kconfig  LICENSE  QUICKSTART.md  README.md  SECURITY.md  SETUP.md  VERSION  build.sh  prj.conf  west.yml
.devcontainer/: Dockerfile  devcontainer.json  setup-west.sh
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  ci.yml
boards/: akiraconsole_esp32s3_procpu.conf  akiraconsole_esp32s3_procpu.overlay  akiraconsole_prod_esp32s3_procpu.conf  akiraconsole_prod_esp32s3_procpu.overlay  b_u585i_iot02a.conf  b_u585i_iot02a.overlay  esp32_devkitc_procpu.conf  esp32_devkitc_procpu.overlay  esp32c3_devkitm.conf  esp32c3_devkitm.overlay  esp32c6_devkitc_esp32c6_hpcore.conf  esp32c6_devkitc_esp32c6_hpcore.mcuboot.conf  esp32c6_devkitc_esp32c6_hpcore.mcuboot.overlay  esp32c6_devkitc_esp32c6_hpcore.overlay  esp32h2_devkitm_esp32h2.conf  esp32h2_devkitm_esp32h2.mcuboot.conf  esp32h2_devkitm_esp32h2.overlay  esp32s3_devkitm_esp32s3_procpu.conf  esp32s3_devkitm_esp32s3_procpu.overlay  esp32s3_super_mini_esp32s3_procpu.conf  esp32s3_super_mini_esp32s3_procpu.overlay  esp32s3_supermini_esp32s3_procpu.conf  lr1121_template.overlay  native_sim.conf  nrf54l15dk_nrf54l15_cpuapp.conf  nrf54l15dk_nrf54l15_cpuapp.overlay  nucleo_h743zi.conf  nucleo_h743zi.overlay  nucleo_l476rg.conf  nucleo_l476rg.overlay  rpi_pico.conf  rpi_pico.overlay  rpi_pico2.conf  rpi_pico2.overlay  sensors.conf  steval_stwinbx1.conf  steval_stwinbx1.mcuboot.conf  steval_stwinbx1.mcuboot.overlay  steval_stwinbx1.openocd.cfg  steval_stwinbx1.overlay  (+2 more)
boards/akiraconsole/: akiraconsole-pinctrl.dtsi  akiraconsole_esp32s3_procpu_ili9341.overlay  board.cmake
boards/akiraconsole_prod/: Kconfig.akiraconsole_prod  akiraconsole_prod-pinctrl.dtsi  akiraconsole_prod_esp32s3_procpu.dts  akiraconsole_prod_esp32s3_procpu.yaml  akiraconsole_prod_esp32s3_procpu_ili9341.overlay  akiraconsole_prod_esp32s3_procpu_sharp.overlay  board.cmake  board.yml
boards/esp32s3_super_mini/: Kconfig.esp32s3_super_mini  board.yml  esp32s3_super_mini-pinctrl.dtsi  esp32s3_super_mini_esp32s3_procpu.dts  esp32s3_super_mini_esp32s3_procpu.yaml  esp32s3_super_mini_esp32s3_procpu_defconfig
boards/template/: Kconfig.template  board.cmake  board.yml  template-pinctrl.dtsi  template_procpu.dts  template_procpu.yaml  template_procpu_defconfig
configs/: ccsds.conf
docs/: CNAME  _config.yml  api-stability-policy.md  index.md  ota_design.md
docs/api-reference/: error-codes.md  index.md  manifest-format.md  native-api.md
docs/architecture/: advanced-connectivity.md  aot-compilation.md  connectivity.md  data-flow.md  index.md  runtime.md  scheduling-and-watchdog.md  security.md  system-overview.md
docs/development/: advanced-apps.md  best-practices.md  building-apps.md  index.md  sdk-api-reference.md  sdk-troubleshooting.md
docs/getting-started/: first-app.md  index.md  installation.md  troubleshooting.md
docs/hardware/: index.md  porting-guide.md  sd-card.md
docs/hub/: HUB_INTEGRATION.md  PHONE_APP_INTEGRATION.md  WEB_INTERFACE.md
docs/platform/: esp32-s3.md  index.md  native-sim.md  stm32.md
docs/reference/: build-options.md
docs/resources/: faq.md  performance.md  release-notes.md
include/: akira_boot_guard.h  akira_native_api.h  akiraconsole_native_api.h
include/connectivity/: akira_mesh.h  ccsds.h  matter_manager.h  radio_interface.h  thread_manager.h
include/lib/: akira_delta.h  akira_panic.h  akira_telemetry.h  akira_time.h
include/modules/: akira_log_module.h  akira_time_module.h
src/: akira.h  akira_platform_stubs.c  akira_platform_stubs.h  main.c
src/api/: akira_adc_api.c  akira_adc_api.h  akira_api.h  akira_ble_api.c  akira_ble_api.h  akira_bt_shell_api.c  akira_bt_shell_api.h  akira_common_api.c  akira_common_api.h  akira_crypto_api.c  akira_crypto_api.h  akira_display_api.c  akira_display_api.h  akira_export_api.c  akira_fs_api.c  akira_fs_api.h  akira_gpio_api.c  akira_gpio_api.h  akira_hid_api.c  akira_hid_api.h  akira_i2c_api.c  akira_i2c_api.h  akira_input_api.c  akira_ipc_api.c  akira_ipc_api.h  akira_lifecycle_api.c  akira_lifecycle_api.h  akira_memory_api.c  akira_memory_api.h  akira_net_api.c  akira_net_api.h  akira_ota_api.c  akira_ota_api.h  akira_power_api.c  akira_power_api.h  akira_pwm_api.c  akira_pwm_api.h  akira_python_api.c  akira_python_api.h  akira_rf_api.c  (+17 more)
src/connectivity/: buf_pool.c  buf_pool.h  transport_interface.h
src/console_shell/: boot_anim.h  boot_logo_sprite.h
src/drivers/: akira_lsm6ds3.c  driver_registry.h  platform_hal.c  platform_hal.h  psram.c  psram.h  rf_manager.h
tests/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/boards/: native_sim.overlay
tests/cfdp_udp/: CMakeLists.txt  instance_a.conf  instance_b.conf  prj.conf  run_cfdp_udp_integration.sh
tests/cfdp_udp/src/: main.c
tests/src/: test_akira_cfdp_service.c  test_app_lifecycle.c  test_ccsds_bch.c  test_ccsds_cfdp_checksum.c  test_ccsds_cfdp_entity.c  test_ccsds_cfdp_filestore.c  test_ccsds_cfdp_pdu.c  test_ccsds_cfdp_ranges.c  test_ccsds_cfdp_space_packet.c  test_ccsds_cfdp_staging.c  test_ccsds_cfdp_types.c  test_ccsds_cfdp_ut.c  test_ccsds_cltu.c  test_ccsds_crc16.c  test_ccsds_profile.c  test_ccsds_rs.c  test_ccsds_shell.c  test_ccsds_tc_frame.c  test_ccsds_time_packet.c  test_ccsds_time_service.c  test_ccsds_tm_frame.c  test_manifest_parser.c  test_ota_state.c  test_security.c
tests/stubs/: stub_mcuboot.c
wasm_sample/: README.md  ble_led.c  ble_led.json  build_wasm_apps.sh  button_test.c  button_test_manifest.json  compass.c  compass.json  cube3d.c  cube3d.json  display_test.c  display_test.json  embed_manifest.py  gpio.c  hello_world.c  hello_world.json  imu_3d.c  imu_3d.json  imu_timer_test.c  inclinometer.c  inclinometer.json  logic_analyzer.c  logic_analyzer.json  net_echo.c  net_echo.json  net_server.c  net_server.json  storage_test.c  storage_test.json  tetris.c  tetris.json
zephyr/: module.yml
(+206 files in other folders)
